# monopolPy

./: .gitignore  LICENSE  pyproject.toml
data/: properties.csv
monopyly/: __init__.py
monopyly/dev_tools/: __init__.py  players.py
monopyly/models/: __init__.py  player.py
monopyly/models/deeds/: color_group.py  deed.py  loader.py  utils.py
monopyly/models/dice/: __init__.py  die.py  pair.py
monopyly/models/ledger/: ledger.py
monopyly/models/ledger/transactions/: __init__.py  rent.py  transaction.py
monopyly/models/restrictions/: __init__.py
monopyly/models/restrictions/development/: __init__.py  base.py
monopyly/models/turns/: __init__.py  counter.py
monopyly/utils/: __init__.py  metaclass.py
