[tool.poetry]
name = "monopyly"
version = "1.0.0-dev.1"
description = "Monopoly companion library"
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
inspyre-toolbox = "^1.5.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
ipython = "^8.31.0"
prompt-toolkit = "^3.0.50"
ptipython = "^1.0.1"
ipyboost = {path = "ipyboost-1.0.0a4-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
